footer alignment fix
visible when other plugins add to the footer

--- a/src/css/modules/_footer.scss
+++ b/src/css/modules/_footer.scss
@@ -19,6 +19,7 @@
 
 .txp-footer {
     display: flex;
+    align-items: end;
     justify-content: flex-end;
 
     > * {
